--- a/html-intermediate-codes-main/html-intermediate-codes-main/employee_reg.html
+++ b/html-intermediate-codes-main/html-intermediate-codes-main/employee_reg.html
@@ -75,27 +75,26 @@
         action="#"
         method="get"
         id="registration-form"
-        name="registration-form"
       >
         <div class="form-group">
           <label for="last_name">Last Name:</label>
-          <input type="text" id="last_name" required />
+          <input type="text" id="last_name" name="last_name" required />
         </div>
         <div class="form-group">
           <label for="first_name">First Name:</label>
-          <input type="text" id="first_name" required />
+          <input type="text" id="first_name" name="first_name" required />
         </div>
         <div class="form-group">
           <label for="middle_name">Middle Name:</label>
-          <input type="text" id="middle_name" />
+          <input type="text" id="middle_name" name="middle_name" />
         </div>
         <div class="form-group">
           <label for="birthdate">Birthdate:</label>
-          <input type="date" id="birthdate" required />
+          <input type="date" id="birthdate" name="birthdate" required />
         </div>
         <div class="form-group">
           <label for="department">Department:</label>
-          <select id="department" required>
+          <select id="department" name="department" required>
             <option value="hr">HR</option>
             <option value="finance">Finance</option>
             <option value="it">IT</option>
@@ -104,7 +103,7 @@
         </div>
         <div class="form-group">
           <label for="office">Office:</label>
-          <input type="text" id="office" required />
+          <input type="text" id="office" name="office" required />
         </div>
         <button type="submit" id="submit">Submit</button>
       </form>
@@ -114,7 +113,7 @@
     <script>
       document
         .getElementById("registration-form")
-        .addEventListener("click", function (event) {
+        .addEventListener("submit", function (event) {
           event.preventDefault();
 
           var form = event.target;
