--- a/html-intermediate-codes-main/html-intermediate-codes-main/event_table.html
+++ b/html-intermediate-codes-main/html-intermediate-codes-main/event_table.html
@@ -16,20 +16,25 @@
         padding: 10px;
       }
 
-      th:first-child {
+      th {
         text-align: center;
+        background-color: lightskyblue;
       }
 
       td:nth-child(3) {
         width: 250px;
       }
+
+      tr {
+         background-color: lightgray;
+      }
     </style>
   </head>
   <body>
-    <table border="1">
+    <table>
       <thead>
         <tr>
-          <th colspan="3">Event Name</th>
+          <th colspan="2">Event Name</th>
           <th>Date</th>
           <th>Location</th>
         </tr>
@@ -37,16 +42,19 @@
       <tbody>
         <tr>
           <td>Birthday Party</td>
+          <td>Event Details</td>
           <td>2023-05-28</td>
           <td>Puerto Princesa City, Palawan</td>
         </tr>
         <tr>
-          <td>Wedding</td>
+          <td>Wedding</td>     
+          <td>Event Details</td>
           <td>2023-10-05</td>
           <td>Narra, Palawan</td>
         </tr>
         <tr>
           <td>Wedding Anniversary</td>
+          <td>Event Details</td>
           <td>2023-11-01</td>
           <td>Quezon, Palawan</td>
         </tr>
